# ssg

./: Cargo.toml  LICENSE  config.toml  rustfmt.toml
example/: config.toml
example/content/: 404.md  _404.html  _index.html  _index.md  _main.html  about.md  index.md
example/content/posts/: _index.html  config.toml  my_first_blogpost.md
example/resources/: a.txt  tailwind.css
example/templates/: _404.html  _base.html  _basic.html  _list.html  _post.html  home.html  post.html
resources/: b.txt  c.txt
src/: config.rs  main.rs
src/content/: markdown.rs  mod.rs
src/resources/: mod.rs
src/resources/pipeline/: mod.rs  none.rs  run_command.rs
src/scripting/: lexer.rs  mod.rs  parser.rs
src/scripting/snapshots/: ssg__scripting__lexer__tests__lexing_language_features.snap  ssg__scripting__lexer__tests__lexing_simple_document.snap  ssg__scripting__parser__tests__parse_binary_expressions.snap  ssg__scripting__parser__tests__parse_blocks.snap  ssg__scripting__parser__tests__parse_extend.snap  ssg__scripting__parser__tests__parse_for_loop.snap  ssg__scripting__parser__tests__parse_for_without_idx.snap  ssg__scripting__parser__tests__parse_function_calls.snap  ssg__scripting__parser__tests__parse_if_else.snap  ssg__scripting__parser__tests__parse_if_nested.snap  ssg__scripting__parser__tests__parse_if_null_check.snap  ssg__scripting__parser__tests__parse_member_access.snap  ssg__scripting__parser__tests__parse_render_blocks.snap  ssg__scripting__parser__tests__parse_slot.snap  ssg__scripting__tests__simple_page.snap  (+9 more)
src/templates/: execute.rs  inlining.rs  mod.rs
