[package]
name = "ssg"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["rt", "macros", "rt-multi-thread", "fs"] }
toml = "0.8.20"
comrak = "0.37.0"
walkdir = "2.5.0"
gray_matter = "0.2.8"
tempfile = "3.19.1"
miette = { version = "7.5.0", features = ["fancy"] }
